apple tousch icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		  gtag('config', 'UA-115465434-1');
 		</script>
-		<link rel="icon" type="image/png" href="images/favicon.ico" />
+		<link rel="apple-touch-icon" type="image/png" href="images/favicon.ico" />
 		<title>| Daniel Rosander</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Daniel Rosander">
