--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 		  gtag('config', 'UA-115465434-1');
 		</script>
 		<link rel="icon" type="image/png" href="images/favicon.ico" />
-		<link rel="apple-touch-icon" type="image/png" sizes="72x72" href="images/favicon72x72.ico" />
-		<title>| Daniel Rosander</title>
+		<title>Daniel Rosander</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Daniel Rosander">
 		<meta name="keywords" content="Daniel Rosander">
