--- a/index.html
+++ b/index.html
@@ -1,68 +1,66 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115465434-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-		  gtag('config', 'UA-115465434-1');
-		</script>
-		<link rel="icon" type="image/png" href="images/favicon.ico" />
-		<title>Daniel Rosander</title>
-		<meta charset="utf-8" />
-		<meta name="description" content="Daniel Rosander">
-		<meta name="keywords" content="Daniel Rosander">
-		<meta name="author" content="Daniel Rosander">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-loading">
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title> Daniel Rosander</title>
+  <meta name="description" content="Daniel Rosander">
+  <meta name="keywords" content="Daniel Rosander">
+  <meta name="author" content="Daniel Rosander">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-				<!-- Main -->
-					<section id="main">
-						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="Daniel Rosander" /></span>
-							<h1>Daniel Rosander</h1>
-							<p></p>
-						</header>
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+  <link href="dist/static/fontawesome-all.css" rel="stylesheet">
 
-						<footer>
-							<ul class="icons">
-								<li><a href="cv_daniel_rosander.pdf" target="_blank" class="icon fa-file-text-o" title="cv"><span class="label">cv</span></a>
-								<div class="text"></div></li>
-								<li><a href="mailto:daniel.rosander@gmail.com" target="_blank" class="icon fa-envelope-o" title="e-mail"><span class="label">e-mail</span></a>
-								<div class="text"></div></li>
-							</ul>
-						</footer>
-					</section>
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="dist/css/normalize.css">
+  <link rel="stylesheet" href="dist/css/skeleton.css">
+  <link rel="stylesheet" href="css/custom.css">
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; 2018 Daniel Rosander</li><li>Design: <a target="_blank "href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+  <!-- Scripts
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://use.fontawesome.com/ab6e55a217.js"></script>
 
-			</div>
 
-		<!-- Scripts -->
-			<!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
-			<script>
-				if ('addEventListener' in window) {
-					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
-					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-				}
-			</script>
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.ico">
 
-	</body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115465434-1"></script>
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+  <div class="section hero">
+    <div class="container">
+      <div class="row">
+        <center>
+          <img src="images/avatar.jpg" height="128" width="128">
+          <br>
+          <h1>DANIEL ROSANDER</h1>
+          <a class="fa fa-file-text-o fa-3x" href="cv_daniel_rosander.pdf" target="_blank" title="cv"></a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="fa fa-envelope-o fa-3x" href="mailto:daniel.rosander@gmail.com" target="_blank"  title="e-mail"></a>
+          </center>
+      </div>
+    </div>
+  </div>
+
+<!-- End Document
+
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
 </html>
