--- a/index.html
+++ b/index.html
@@ -25,6 +25,33 @@
   <link rel="stylesheet" href="dist/css/skeleton.css">
   <link rel="stylesheet" href="css/custom.css">
 
+  <style>
+    html, body {
+      height: 100%;
+    }
+
+    .table-container {
+      display: table;
+      height: 100%;
+      width: 100%;
+    }
+
+    .table-block {
+      display: table-row;
+      height: 1px;
+    }
+
+    .footer-push {
+      height: auto;
+    }
+
+    #footer {
+      /* Placeholder footer styles */
+      text-align: center;
+    }
+
+  </style>
+
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -40,10 +67,11 @@
 
 </head>
 <body>
+  <div class="table-container">
+    <div class="table-block footer-push">
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
   <div class="section hero">
     <div class="container">
       <div class="row">
@@ -58,9 +86,20 @@
       </div>
     </div>
   </div>
+</div>
 
-<!-- End Document
 
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="table-block">
+        <!-- Page Footer Layout
+             –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <div class="container">
+          <footer id="footer" class="twelve columns">
+            &copy; 2018 Daniel Rosander
+          </footer>
+        </div> <!-- end footer div.container -->
+      </div>  <!-- end footer div.table-block -->
+    </div>
+  <!-- End Document
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
