--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="dist/css/normalize.css">
   <link rel="stylesheet" href="dist/css/skeleton.css">
   <link rel="stylesheet" href="css/custom.css">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Dosis">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Shadows+Into+Light">
 
   <style>
     html, body {
