--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <style>
     html, body {
       height: 100%;
-      background-color: #F5F5F5;
+      background-color: #303030;
     }
 
     .table-container {
@@ -78,12 +78,13 @@
     <div class="container">
       <div class="row">
         <center>
-          <img src="images/avatar.jpg" height="128" width="128">
+        <!--  <img src="images/avatar.jpg" height="128" width="128"> -->
           <br>
-          <h1>DANIEL ROSANDER</h1>
-          <a class="fa fa-file-text-o fa-3x" href="cv_daniel_rosander.pdf" target="_blank" title="cv"></a>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="fa fa-envelope-o fa-3x" href="mailto:daniel.rosander@gmail.com" target="_blank"  title="e-mail"></a>
+          <h5>
+          <a href="cv_daniel_rosander.pdf" target="_blank" title="cv">resumé</a>
+          <br>
+          <a href="mailto:daniel.rosander@gmail.com" target="_blank"  title="e-mail">contact</a>
+        </h5>
           </center>
       </div>
     </div>
@@ -94,9 +95,9 @@
   <div class="table-block">
         <!-- Page Footer Layout
              –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <div class="container">
+        <div class="footer">
           <footer id="footer" class="twelve columns">
-            &copy; 2018 Daniel Rosander
+            &copy; 2019 Daniel Rosander
           </footer>
         </div> <!-- end footer div.container -->
       </div>  <!-- end footer div.table-block -->
